lib/tests/fixtures/compiler/evaluation/inline_epp_missing_param.pp
inline_epp(@(TEMPLATE), { foo => 1})
  <%- | Integer $foo,
        Integer $bar
      | -%>
  |- TEMPLATE
